bugfix hide location searchbox on small devices

--- a/less/style.less
+++ b/less/style.less
@@ -350,6 +350,7 @@ blockquote:after {
         height: 32px;
         border: 1px solid @esprova-red; 
         background-color: fade(white, 92%);
+        display: none;
     }
 
     #cd-follow_map_bounds {
